fix button centering issue in initial queries, email button bug fix

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -419,7 +419,16 @@ div.right-panel {
   transition:margin-left ease .5s;
   max-width: 991px;
 }
+#topTerms ~ #aboutForm {
+  margin: 1em auto;
+  min-height: 50vh;
+}
 #aboutForm {
+  .reg-buttons-msg-wrapper {
+    width: 500px;
+    max-width: 100%;
+    margin: 0 auto;
+  }
   .reg-complete-container {
     width: 350px;
     max-width: 100%;
