--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -9,7 +9,7 @@
         <div class="col-md-11">
             <div class="row">
                 <div class="col-md-push-2 col-md-9 col-xs-12">
-                    <h4 class="tnth-headline left-indent-top">{{ _("New User") }}</h4>
+                    <h4 class="tnth-headline left-indent-top">{{ _("New Patient") }}</h4>
                     <hr/>
                     <br/>
                     <div class="profile-item-container create-account-container">
