--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -371,8 +371,13 @@ div.right-panel {
   min-height: 50vh;
 }
 #topTerms ~ #aboutForm {
-  margin: 1em 0;
-  min-height: 20vh;
+  margin: 1em auto;
+  min-height: 50vh;
+}
+.reg-buttons-msg-wrapper {
+  width: 500px;
+  max-width: 100%;
+  margin: 0 auto;
 }
 #aboutForm .reg-complete-container {
   width: 350px;
