disabled enter manually button and display appropriate message when patient has completed all questionnaires

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -316,6 +316,9 @@ select:not([multiple]) {
     margin: 1em 4em;
     border-top: 1px solid #ddd;
   }
+  #enterManualInfoContainer {
+    margin-bottom: 1em;
+  }
 }
 
 @media (max-width: 1199px) {
