--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -258,6 +258,9 @@ select:not([multiple]) {
   margin: 1em 4em;
   border-top: 1px solid #ddd;
 }
+#mainDiv.profile #enterManualInfoContainer {
+  margin-bottom: 1em;
+}
 @media (max-width: 1199px) {
   #mainDiv.profile .footer-container.flex{
     justify-content: center;
