--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -563,8 +563,8 @@
             if (leafOrgs) OT.filterOrgs(leafOrgs);
             if (!orgsEditable) disableOrgs();
 
-            {%- if ((person.has_role('patient') or current_user.has_role(ROLE.PATIENT)) and 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or
-                ((person.has_role('patient') and current_user.has_role(ROLE.STAFF)) and 'staff' in config.CONSENT_EDIT_PERMISSIBLE_ROLES)
+            {%- if ((person.has_role(ROLE.PATIENT) or current_user.has_role(ROLE.PATIENT)) and 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or
+                ((person.has_role(ROLE.PATIENT) and current_user.has_role(ROLE.STAFF)) and 'staff' in config.CONSENT_EDIT_PERMISSIBLE_ROLES)
              -%}
                 var userOrgs = $("#userOrgs input[name='organization']").not('[parent_org]');
                 if (userOrgs.length == 0) userOrgs = $("#userOrgs input[name='organization']");
