--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1480,8 +1480,14 @@ div.noOrg-container {
   .title {
     margin-top: 5%;
   }
+  #userOrgs {
+  margin-top: 2em;
+  }
   #phoneGroup {
-    margin-top: 1em;
+    margin-top: 1.5em;
+  }
+  #emailGroup {
+    margin-top: 0;
   }
   #studyIdContainer {
    margin-top: 1.8em;
