fix inconsistent display in UI

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -37,7 +37,7 @@
 @bodyBgColor:      #FFF;
 @baseColor:       #333;
 @linkColor:       #57675B;
-@linkHover:       #2a4531;
+@linkHover:       #60654f;
 @btnColor:        #79815D;
 @featureBtnColor: #333;
 @featureBtnHoverColor: #FFF;
@@ -82,7 +82,10 @@ body {
 .capitalize {
   text-transform: capitalize;
 }
-
+.btn:focus,
+a:focus {
+  outline: none;
+}
 .btn {
   cursor: pointer;
   border-radius: 0;
@@ -379,7 +382,7 @@ select:not([multiple]) {
     cursor:pointer;
   }
   li:hover {
-    color: @menuTextHoverColor;
+    color: @linkHover;
     transform: scale(1.05);
   }
 }
@@ -672,7 +675,7 @@ div.right-panel {
   }
   tr[data-uniqueid]:hover {
    background-color: #ececea;
-   color: #606a73;
+   color: @linkHover;
   }
   TH {
     background-image: linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
@@ -1303,10 +1306,9 @@ div.right-panel {
   height: 2.5em;
   width: 70px;
   padding: 0 0.7em;
-  /*background: linear-gradient(to bottom, #FFF, #e4e4e4);
-  border: solid 1px #dad8d8;*/
   color: #FFF;
-  background: #79815d;
+  background: @btnColor;
+  border-color: @btnColor;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 0.9em;
@@ -1315,7 +1317,7 @@ div.right-panel {
 #mainDiv.profile .profile-item-edit-btn:active,
 #mainDiv.profile .profile-item-edit-btn:focus {
   color: #FFF;
-  background-color: #5f676e;
+  background-color: @linkHover;
 }
 #mainDiv.profile .profile-item-edit-btn::before {
   content: "EDIT";
@@ -1348,7 +1350,10 @@ div.right-panel {
   vertical-align: top;
 }
 #mainDiv.profile .profile-item-container .view-container td {
-  padding: 0.8em 1em;
+  padding: 0.6em 1em;
+}
+#mainDiv.profile .profile-item-container .view-container tr.study-id-view td {
+  padding: 0.6em 1em 0 1em;
 }
 #aboutForm .view-container {
   display: none;
@@ -1390,6 +1395,8 @@ div.right-panel {
   height: 3.2em;
   display: inline-block;
   width: 300px;
+  background: @btnColor;
+  border-color: @btnColor;
 }
 
 .profile-create-item-container {
@@ -1590,7 +1597,7 @@ div.noOrg-container {
   margin-top: 0.5em;
 }
 #userSessionReportDetailHeader a[href]:hover {
-  color: #8c9094;
+  color: @linkHover;
 }
 #userSessionReportDetailTable caption {
   padding: 0;
@@ -1967,7 +1974,7 @@ sub.pointer {
   cursor:pointer;
 }
 sub.pointer:hover {
-  color: #79815D;
+  color: @linkHover;
 }
 
 .report-custom-header {
@@ -2285,6 +2292,9 @@ div.timezone-warning.text-warning {
   .checkbox input[type=checkbox] {
     top: -1px;
   }
+  #profile-gender-list {
+    margin-top: 0.2em;
+  }
   #profile-gender-list input[type=radio] {
     top: -2px;
    }
@@ -2554,10 +2564,10 @@ div.timezone-warning.text-warning {
 
   .form-group {
     input[type=checkbox] {
-      margin-top: 4px;
+      margin-top: 5px;
     }
     input[type=radio] {
-      margin-top: 4px;
+      margin-top: 3px;
     }
   }
 
