add send registration email functionality relating to staff-admin page

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1343,7 +1343,7 @@ h4.detail-title {
   max-width: 100%;
 }
 #resetPasswordContainer {
-  flex-grow: 0.7;
+  flex-grow: 0.3;
 }
 #passwordResetMessage {
   width: 300px;
@@ -1530,6 +1530,7 @@ div.noOrg-container {
   padding-left: 2em;
   padding-right: 2em;
   max-width: 100%;
+  width: 400px;
   label{
     font-size:@mediumText;
   }
@@ -1543,6 +1544,9 @@ div.noOrg-container {
   margin-left:0.5em;
   width: 300px;
   max-width: 100%;
+}
+#sendRegistrationEmailForm label {
+  font-weight: normal;
 }
 #userSessionReportDetailTable {
   margin-left: -1%;
