--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -197,7 +197,7 @@ $(document).ready(function(){
                 }).get();
 
                 _accountArray['organizations'] = orgIDs;
-                _accountArray['roles'] =  [{'name': 'staff'}];
+                _accountArray['roles'] =  [{'name': 'staff'}, {'name': 'write_only'}];
                 _accountArray['consents'] = getConsents();
                 //console.log(_demoArray)
 
