--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1222,7 +1222,7 @@ h4.detail-title {
   max-width: 100%;
 }
 #resetPasswordContainer {
-  flex-grow: 0.7;
+  flex-grow: 0.3;
 }
 #passwordResetMessage {
   width: 300px;
@@ -1397,6 +1397,7 @@ div.noOrg-container span {
   border: 1px solid #cec4c4;
   padding-left: 2em;
   padding-right: 2em;
+  width: 400px;
   max-width: 100%;
 }
 #profileSendEmailContainer label {
@@ -1411,6 +1412,9 @@ div.noOrg-container span {
   font-size: 0.87em;
   margin-top: 1em;
   margin-left: 0.5em;
+}
+#sendRegistrationEmailForm label {
+  font-weight: normal;
 }
 #userSessionReportDetailTable {
   margin-left: -1%;
