--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1369,7 +1369,7 @@ div.right-panel {
   max-width: 100%;
 }
 #resetPasswordContainer {
-  flex-grow: 0.7;
+  flex-grow: 0.3;
 }
 #passwordResetMessage {
   width: 300px;
@@ -1530,6 +1530,7 @@ div.noOrg-container {
   background-color: #f9f9f9;
   background-color: rgba(204, 204, 204, 0.3);
   border-radius: 6px;
+  width: 400px;
   max-width: 100%;
   label{
     font-size:0.95em;
@@ -1567,6 +1568,11 @@ div.noOrg-container {
   font-size: 0.87em;
   margin-top: 1em;
   margin-left:0.5em;
+  width: 250px;
+  max-width: 100%;
+}
+#sendRegistrationEmailForm label {
+  font-weight: normal;
 }
 
  #profileStudyIDContainer {
