--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -255,13 +255,13 @@
     <div id="sendEmailForm">
         <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
         <div class="registration-status-container">
-            <span class="text-muted">Registration Status: </span>
+            <span class="text-muted">Registration status: </span>
             {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">not yet registered</h4>
             {%- else -%}
             <h4 class="text-success registration-label">registered</h4>
             {%- endif -%}
         </div>
-        <label id="sendEmailLabel" class="text-muted">{{ _("Send Email to Patient") }}</label>
+        <label id="sendEmailLabel" class="text-muted">{{ _("Send email to ") }}{%- if person.has_role(ROLE.PATIENT)-%}{{_('patient')}}{%-else-%}{{_('user')}}{%-endif-%}</label>
         <select  id="profileEmailSelect" class="form-control bd-element">
             <option value="">{{ _("Select Email...") }}</option>
             {%- if person.has_role('write_only') %}<option value="invite">{{ app_text('profileSendEmail option invite') }}</option>{%- endif %}
@@ -269,6 +269,7 @@
         </select>
         <button id="btnProfileSendEmail" class="btn btn-tnth-primary disabled">{{ _("Send email") }}</button>
         <div id="profileEmailMessage" class="text-info"></div>
+        <div id="profileEmailErrorMessage" class="text-danger"></div>
     </div>
     <script>$(function () {
         function getAccessUrl() {
@@ -281,9 +282,10 @@
                 async: false
             }).done(function(data) {
                 url = data['access_url'];
+                $("#profileEmailErrorMessage").text("");
                 console.log(url);
             }).fail(function() {
-                console.log('failed request');
+                $("#profileEmailErrorMessage").text("failed request to get email invite url");
             });
             return url;
         };
@@ -328,13 +330,15 @@
                 })();
                 if (selectedOption.val() == 'invite'){
                     return_url = getAccessUrl();
-                    {# javascript variables are not available at template
-                       rendering time.  insert a placeholder and then
-                       replace once the variable is available. #}
-                    body = '{{ app_text('profileSendEmail invite email_body',
-                            'url_placeholder') | safe }}'.replace(/\(clinic name\)/g, clinicName);
-                    body = body.replace(/url_placeholder/g, return_url);
-                    subject = '{{ app_text('profileSendEmail invite email_subject') }}'.replace(/\(clinic name\)/g, clinicName);
+                    if (hasValue(return_url)) {
+                        {#- javascript variables are not available at template
+                           rendering time.  insert a placeholder and then
+                           replace once the variable is available. -#}
+                        body = '{{ app_text('profileSendEmail invite email_body',
+                                'url_placeholder') | safe }}'.replace(/\(clinic name\)/g, clinicName);
+                        body = body.replace(/url_placeholder/g, return_url);
+                        subject = '{{ app_text('profileSendEmail invite email_subject') }}'.replace(/\(clinic name\)/g, clinicName);
+                    };
                 }
                 else { // reminder
                     body = '{{ app_text('profileSendEmail reminder email_body', url_for('user.login', _external=True, email=person.email)) | safe }}'.replace(/\(clinic name\)/g, clinicName);
@@ -353,8 +357,6 @@
                         console.log('failed request');
                         $('#profileEmailMessage').text('Unable to send email.');
                     });
-                } else {
-                    $('#profileEmailMessage').text('Unable to generate URL for email');
                 };
             } else $('#profileEmailMessage').text('You must select a email type.');
         });
@@ -366,7 +368,87 @@
         <div class="form-group float-input-label well well-lg" id="profileSendEmailContainer">{{profileEmailForm(person)}}</div>
     {% endif %}
 {%- endmacro %}
+{% macro profileRegistrationEmail(person) -%}
+    {%- if person -%}
+    <div id="sendRegistrationEmailForm">
+        <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
+        <div class="registration-status-container">
+            <span class="text-muted">Registration status: </span>
+            {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">not yet registered</h4>
+            {%- else -%}
+            <h4 class="text-success registration-label">registered</h4>
+            {%- endif -%}
+        </div>
+        <button id="btnProfileSendEmail" class="btn btn-tnth-primary disabled">{{ _("Send registration email") }}</button>
+        <div id="profileEmailMessage" class="text-info"></div>
+        <div id="profileEmailErrorMessage" class="text-danger"></div>
+    </div>
+    <script>$(function () {
+        function getAccessUrl() {
+            var url = '';
+            $.ajax ({
+                type: 'GET',
+                url: '/api/user/' + $("#_userId").val() + '/access_url',
+                contentType: "application/json; charset=utf-8",
+                dataType: 'json',
+                async: false
+            }).done(function(data) {
+                url = data['access_url'];
+                $("#profileEmailErrorMessage").text("");
+                console.log(url);
+            }).fail(function() {
+                $("#profileEmailErrorMessage").text("failed request to get email invite url");
+            });
+            return url;
+        };
+        if (!hasValue($("#email").val())) $("#profileEmailSelect").attr("disabled", true);
 
+        $('#btnProfileSendEmail').on('click', function(event) {
+            event.preventDefault();
+            var email = $('#email').val();
+            var subject = '';
+            var body = '';
+            var return_url = '';
+            var clinicName = (function() {
+                var orgs = $("#userOrgs input[name='organization']:checked");
+                var parentName = "";
+                if (orgs.length > 0 ) {
+                    orgs.each(function() {
+                        if (!parentName) {
+                            parentName = $(this).attr("data-parent-name");
+                            if (!hasValue(parentName)) parentName = $(this).closest(".org-container[data-parent-id]").attr("data-parent-name");
+                        };
+                    });
+                };
+                var cn = parentName ? parentName: "your clinic";
+                return cn;
+            })();
+            return_url = getAccessUrl();
+            if (hasValue(return_url)) {
+                body = "<p>Hello,</p>";
+                body += "<p>This email was sent to you from " + clinicName + ". This is an invitation to complete your registration.</p>";
+                body += "Verify your account now by clicking on the link below to visit TrueNTH:";
+                body += "<br/><br/>";
+                body += "<a href='" + return_url + "'>Complete Registration</a>";
+                subject = "Registration invite from " + clinicName;
+            };
+            if (body != '') {
+                $.ajax ({
+                    type: 'POST',
+                    url: '/invite',
+                    contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
+                    data: {'subject': subject, 'recipients': email, 'body': body}
+                }).done(function(data) {
+                    $('#profileEmailMessage').text(selectedOption.text() + ' email sent to ' + email);
+                }).fail(function() {
+                    console.log('failed request');
+                    $('#profileEmailMessage').text('Unable to send email.');
+                });
+            };
+        });
+     });</script>
+    {%- endif -%}
+{%- endmacro %}
 {% macro profilePhone(person) -%}
     <div id="phoneGroup" class="form-group float-input-label profile-section">
         <label for="phone">{{ _("Cell") }} <span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
@@ -1619,11 +1701,13 @@
             {{ profileCustomDetail(person) }}
         {%- endif -%}
     {%- endif -%}
-    <div class="row">
-        <div class="col-md-12 col-xs-12">
-            <h4 class="profile-item-title detail-title">Patient Details</h4>
+    {% if person and person.has_role(ROLE.PATIENT) -%}
+        <div class="row">
+            <div class="col-md-12 col-xs-12">
+                <h4 class="profile-item-title detail-title">{{_("Patient Details")}}</h4>
+            </div>
         </div>
-    </div>
+    {%- endif %}
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="profile-item-container editable" data-sections="demo">
@@ -1677,11 +1761,11 @@
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
                     <div class="flex">
                         <div id="resetPasswordContainer" class="flex-item">
-                            <p class="text-muted communication-prompt">Send reset password email to patient</p>
+                            <p class="text-muted communication-prompt">{{_("Send reset password email to patient")}}</p>
                             {{resetPassword(person)}}
                         </div>
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
-                        <div id="registrationEmailContainer" class="flex-item"><p class="text-muted communication-prompt registration-email-prompt">Send registration email to patient</p>{{profileSendEmail(person)}}</div>
+                        <div id="registrationEmailContainer" class="flex-item"><p class="text-muted communication-prompt registration-email-prompt">{{_("Send registration email to patient")}}</p>{{profileSendEmail(person)}}</div>
                         {%- endif %}
                     </div>
                 </div>
@@ -1694,9 +1778,12 @@
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
                     <div class="flex">
                         <div id="resetPasswordContainer" class="flex-item">
-                            <p class="text-muted communication-prompt">Send reset password email to staff</p>
+                            <p class="text-muted communication-prompt">{{_("Send reset password email to staff")}}</p>
                             {{resetPassword(person)}}
                         </div>
+                        {%- if person and person.has_role(ROLE.WRITE_ONLY) -%}
+                            <div id="registrationEmailContainer" class="flex-item"><p class="text-muted communication-prompt registration-email-prompt">{{_("Send registration email to user")}}</p>{{profileRegistrationEmail(person)}}</div>
+                        {%- endif -%}
                     </div>
                 </div>
             </div>
