add missing translation tags in profile page

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -830,7 +830,7 @@ div.right-panel {
 #patientList div.or,
 #staffList div.or {
   display: inline-block;
-  background-color: #888a8c;
+  background-color: #9fa294;
   margin: 1.5em 1em 1em;
 }
 #patientList #_downloadLink {
