--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -895,7 +895,7 @@ div.right-panel {
 #patientList {
   div.or {
     display: inline-block;
-    background-color: #888a8c;
+    background-color: #9fa294;
     margin: 1.5em 1em 1em 1.2em;
   }
   #_downloadLink {
@@ -913,7 +913,7 @@ div.right-panel {
 #staffList {
   div.or {
     display: inline-block;
-    background-color: #888a8c;
+    background-color: #9fa294;
     margin: 1.5em 1em 1em 1.2em;
   }
   .firstname-field, .lastname-field {
