--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -435,11 +435,11 @@
             if (body != '') {
                 $.ajax ({
                     type: 'POST',
-                    url: '/invite',
+                    url: "{{url_for('portal.invite')}}",
                     contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
                     data: {'subject': subject, 'recipients': email, 'body': body}
                 }).done(function(data) {
-                    $('#profileEmailMessage').text(selectedOption.text() + ' email sent to ' + email);
+                    $('#profileEmailMessage').text('invite email sent to ' + email);
                 }).fail(function() {
                     console.log('failed request');
                     $('#profileEmailMessage').text('Unable to send email.');
@@ -487,7 +487,7 @@
     {% endif %}
     </script>
 {%-endmacro %}
-
+div.or
 {% macro profileOrgsSelector(person, current_user, consent_agreements) -%}
     <div id="userOrgs_view" class="view-container"></div>
     <div class="edit-container">
