--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1236,7 +1236,7 @@ h4.detail-title {
   max-width: 100%;
 }
 #resetPasswordContainer {
-  flex-grow: 0.7;
+  flex-grow: 0.3;
 }
 #passwordResetMessage {
   width: 300px;
@@ -1257,8 +1257,8 @@ h4.detail-title {
   padding: 0.7em 1em 1em 1em;
 }
 #createUserLink:hover {
-  color: #5f676e;
-  background: #FFF;
+  color: #FFF;
+  background: #333;
 }
 .profile-create-item-container {
   border-radius: 8px;
@@ -1418,6 +1418,7 @@ div.noOrg-container span {
   border: 1px solid #cec4c4;
   padding-left: 2em;
   padding-right: 2em;
+  width: 400px;
   max-width: 100%;
 }
 #profileSendEmailContainer label {
@@ -1432,6 +1433,9 @@ div.noOrg-container span {
   font-size: 0.87em;
   margin-top: 1em;
   margin-left: 0.5em;
+}
+#sendRegistrationEmailForm label {
+  font-weight: normal;
 }
 #userSessionReportDetailTable {
   margin-left: -1%;
