consent org ui fixes to include setting default consent for parent org with no consent agreement

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1466,6 +1466,9 @@ div.main-state-container .noOrg-container {
     right: 5px !important;
     top: -1px !important;
   }
+  & .divider + label {
+    margin-left: 0.5em;
+  }
   .divider {
     display: block;
     height: 0.27em;
