--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -295,7 +295,7 @@
           <div class="noOrg-container"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0"><span>{{ _("I'm not receiving care at any of the above clinics") }}</span></label></div>
         </div>
       </div>
-      {{consent(consent_agreements)}}
+      {{consent_fields(consent_agreements)}}
     </div>
     <script>
     function _orgsCallback() {
@@ -317,16 +317,15 @@
         tnthAjax.getOrgs($("#iq_userId").val(), false,true, _orgsCallback);
       });
     </script>
-
   {%- endmacro %}
-  {% macro consent(consent_agreements) -%}
-    {% if consent_agreements %}
-        <div id="consentContainer" style="display:none">
-          {% for org in consent_agreements %}
-            <div id="{{org}}_consentItem" class="well consent"><input type="hidden" id="{{org}}_agreement_url" value="{{consent_agreements[org].url}}" /></div>
-          {% endfor %}
-        </div>
-      {% endif %}
+  {% macro consent_fields(consent_agreements) -%}
+    {%-if consent_agreements -%}
+        {%- for org in consent_agreements -%}
+           {%- if consent_agreements[org].url and consent_agreements[org].asset -%}
+              <div id="{{org}}_consentItem" class="consent"><input type="hidden" id="{{org}}_agreement_url" value="{{consent_agreements[org].url}}" /><input type="hidden" id="{{org}}_editor_url" value="{{consent_agreements[org].editor_url}}" data-show="{%if current_user and current_user.has_role(ROLE.CONTENT_MANAGER) %}true{%else%}false{%endif%}"/><input type="hidden" id="{{org}}_agreement_organization_name" value="{{consent_agreements[org].organization_name}}"/></div>
+            {%- endif -%}
+        {%- endfor -%}
+    {%-endif-%}
   {%- endmacro %}
 
 
