--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1354,6 +1354,9 @@ div.main-state-container .noOrg-container {
   height: 0.27em;
   margin-bottom: 0.15em;
 }
+#fillOrgs .divider + label {
+  margin-left: 0.5em;
+}
 div.noOrg-container {
   font-size: 0.95em;
   margin-top: 0.2em;
