--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1,4 +1,4 @@
-{% from "initial_queries_macros.html" import patientQGroup %}
+{% from "initial_queries_macros.html" import patientQGroup, consent_fields %}
 
 {% macro profileImage(person) -%}
     {% if person and person.image_url %}
@@ -261,7 +261,7 @@
             <h4 class="text-success registration-label">{{_('registered')}}</h4>
             {%- endif -%}
         </div>
-        <label id="sendEmailLabel" class="text-muted">{{ _(gettext("Send email to %(name)", name='{%- if person and person.has_role(ROLE.PATIENT)-%}patient{%-else-%}user{%-endif-%}'))}}</label>
+        <label id="sendEmailLabel" class="text-muted">{{ _("Send email to ")}}{%- if person and person.has_role(ROLE.PATIENT)-%}{{_('patient')}}{%-else-%}{{_('user')}}{%-endif-%}</label> 
         <select  id="profileEmailSelect" class="form-control bd-element">
             <option value="">{{ _("Select Email...") }}</option>
             {%- if person.has_role('write_only') %}<option value="invite">{{ app_text('profileSendEmail option invite') }}</option>{%- endif %}
@@ -374,7 +374,7 @@
         <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
         <div class="registration-status-container">
             <span class="text-muted">{{_('Registration status:')}}</span>
-            {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">not yet registered</h4>
+            {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">{{_("not yet registered")}}</h4>
             {%- else -%}
             <h4 class="text-success registration-label">{{_('registered')}}</h4>
             {%- endif -%}
@@ -448,6 +448,7 @@
      });</script>
     {%- endif -%}
 {%- endmacro %}
+
 {% macro profilePhone(person) -%}
     <div id="phoneGroup" class="form-group float-input-label profile-section">
         <label for="phone">{{ _("Cell") }} <span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
@@ -486,11 +487,12 @@
     {% endif %}
     </script>
 {%-endmacro %}
-div.or
+
 {% macro profileOrgsSelector(person, current_user, consent_agreements) -%}
     <div id="userOrgs_view" class="view-container"></div>
     <div class="edit-container">
         <div id="userOrgs" class="customized">
+           <input type="hidden" id="stock_consent_url" value="{{ url_for('portal.stock_consent', org_name='placeholder', _external=True)}}">
            <p class="prompt text-muted">{{ _("In what state ")}}{% if current_user and current_user.has_role(ROLE.STAFF)%}{{_("is the patient ")}}{%else%}{{_("are you ")}}{% endif %}{{_("currently receiving prostate cancer care?") }}</p>
            <div class="state-selector-container"><select id="stateSelector" class="form-control"></select></div>
            <div id="fillOrgs" userId="{{person.id if person}}" class="orgs-by-state" {%if person and person.has_role(ROLE.PATIENT) and person.id == current_user.id %}patient_view="true"{%endif%}>
@@ -505,7 +507,7 @@ div.or
                </div>
            </div>
            <div id="userOrgsInfo" class="text-muted">No clinic found in selected clinic.</div>
-           {% if consent_agreements %}{{consent(person, consent_agreements, current_user)}}{% endif %}
+           {% if consent_agreements %}{{consent(person, consent_agreements, current_user, True)}}{% endif %}
         </div>
     </div>
     <script>
@@ -591,7 +593,7 @@ div.or
                                         if (!c) parentId = item.id;
                                     }
                                     if (parentId) {
-                                        $("#" + __state + "_container").append("<div class='radio'><label><input class='clinic' type='radio' id='" + item.id + "_org' value='" + item.id + "' state='" + __state + "' name='organization' data-parent-id='" + parentId + "'>" + item.name + "</label></div>");
+                                        $("#" + __state + "_container").append("<div class='radio'><label><input class='clinic' type='radio' id='" + item.id + "_org' value='" + item.id + "' state='" + __state + "' name='organization' data-parent-name='" + item.name + "' data-parent-id='" + parentId + "'>" + item.name + "</label></div>");
                                     };
                                 };
                             };
@@ -630,6 +632,7 @@ div.or
             {% if 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES %}<label>{{ _("Main clinic for prostate cancer care") }}</label>{%else%}
             <label>{{_("Clinics ")}}<span class="text-muted smaller-text">({{ _("Optional") }})</span></label>{% endif %}
             <div class="indent">
+            <input type="hidden" id="stock_consent_url" value="{{ url_for('portal.stock_consent', org_name='placeholder', _external=True)}}">
             <div id="fillOrgs" {% if person and person.has_role(ROLE.PATIENT) and (person.id == current_user.id) %}patient_view="true"{%endif%}></div>
             <div class="noOrg-container" style="{{'display:none' if removeNone == 'true'}}"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0"><span>{{ _("None of the Above") }}</span></label></div>
             </div>
@@ -708,52 +711,60 @@ div.or
         };
     </script>
 {%- endmacro %}
-
-{% macro consent(person, consent_agreements, current_user) -%}
+{% macro consent_modal(person, consent_agreement, org) -%}
+    {%- if person and consent_agreement and org -%}
+        <div class="modal fade" id="{{org}}_consentModal" tabindex="-1" role="dialog" aria-labelledby="{{org}}_consentModal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">{{ _("Consent to share information") }}</h4>
+                    </div>
+                    <div class="modal-body">
+                    <h4>Terms</h4>
+                    <div style="border-style:ridge; max-height: 250px; overflow: auto; padding: 1em; background-color:#F5F5F5">{{consent_agreement.asset|safe}}</div>
+                    <br/>
+                    <p>{{_("I consent to sharing information with the ")}}<span class="consent-clinic-name">{{consent_agreement.organization_name}}</span></p>
+                    <div id="{{org}}_consentAgreementRadioList" class="profile-radio-list">
+                      <label class="radio-inline">
+                          <input type="radio" name="toConsent" id="{{org}}_consent_yes" data-org="{{org}}" value="yes"/>
+                          {{ _("Yes") }}
+                      </label>
+                      <br/>
+                      <label class="radio-inline">
+                          <input type="radio" name="toConsent" id="{{org}}_consent_no" data-org="{{org}}"  value="no"/>
+                          {{ _("No") }}
+                      </label>
+                    </div>
+                    <div id="{{org}}_consentAgreementMessage" class="error-message"></div>
+                     </div>
+                     <br/>
+                     <div class="modal-footer" >
+                        <button type="button" class="btn btn-default btn-consent-close" data-org="{{org}}" data-dismiss="modal" aria-label="Close">{{ _("Close") }}</button>
+                     </div>
+                </div>
+            </div>
+        </div>
+    {%- endif -%}
+{%- endmacro %}
+{% macro consent(person, consent_agreements, current_user, includeModal) -%}
     {%- if person and consent_agreements -%}
         <div id="consentContainer">
-            {%- for org in consent_agreements -%}
-               {% if consent_agreements[org].url and consent_agreements[org].asset %}
-              <div id="{{org}}_consentItem" class="consent"><input type="hidden" id="{{org}}_agreement_url" value="{{consent_agreements[org].url}}" /><input type="hidden" id="{{org}}_editor_url" value="{{consent_agreements[org].editor_url}}" data-show="{%if current_user and current_user.has_role(ROLE.CONTENT_MANAGER) %}true{%else%}false{%endif%}"/><input type="hidden" id="{{org}}_agreement_organization_name" value="{{consent_agreements[org].organization_name}}"/></div>
-                  <div class="modal fade" id="{{org}}_consentModal" tabindex="-1" role="dialog" aria-labelledby="{{org}}_consentModal">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                                <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title">{{ _("Consent to share information") }}</h4>
-                                </div>
-                                <div class="modal-body">
-                                <h4>Terms</h4>
-                                <div style="border-style:ridge; max-height: 250px; overflow: auto; padding: 1em; background-color:#F5F5F5">{{consent_agreements[org].asset|safe}}</div>
-                                <br/>
-                                <p>{{_("Do you consent to sharing information with the ")}}<span class="consent-clinic-name">{{consent_agreements[org].organization_name}}</span>?</p>
-                                <div id="{{org}}_consentAgreementRadioList" class="profile-radio-list">
-                                  <label class="radio-inline">
-                                      <input type="radio" name="toConsent" id="{{org}}_consent_yes" data-org="{{org}}" value="yes"/>
-                                      {{ _("Yes") }}
-                                  </label>
-                                  <br/>
-                                  <label class="radio-inline">
-                                      <input type="radio" name="toConsent" id="{{org}}_consent_no" data-org="{{org}}"  value="no"/>
-                                      {{ _("No") }}
-                                  </label>
-                                </div>
-                                <div id="{{org}}_consentAgreementMessage" class="error-message"></div>
-                                 </div>
-                                 <br/>
-                                 <div class="modal-footer" >
-                                    <button type="button" class="btn btn-default btn-consent-close" data-org="{{org}}" data-dismiss="modal" aria-label="Close">{{ _("Close") }}</button>
-                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
-            {%- endfor -%}
+            {{consent_fields(consent_agreements)}}
+            {%- if includeModal-%}
+                {%- for org in consent_agreements -%}
+                   {%- if consent_agreements[org].url and consent_agreements[org].asset -%}
+                   {{consent_modal(person, consent_agreements[org], org)}}
+                   {%- endif -%}
+                {%- endfor -%}
+            {%- endif -%}
+            <div class="error-message"></div>
         </div>
         <script>
             $(function() {
                 $("#consentContainer input[name='toConsent']").each(function() {
-                    $(this).on("click", function() {
+                    $(this).on("click", function(e) {
+                        e.stopPropagation();
                         var orgId = $(this).attr("data-org");
                         if ($(this).val() == "yes") {
                             var params = CONSENT_ENUM["consented"];
@@ -777,6 +788,11 @@ div.or
                             var userId = $("#fillOrgs").attr("userId");
                             assembleContent.demo(userId ,true, $("#userOrgs input[name='organization']:checked"), true);
                         };
+                    });
+                    $(this).on("shown.bs.modal", function() {
+                        $("#consentContainer input[name='toConsent']").each(function(){
+                            $(this).prop("checked", false);
+                        });
                     });
                 });
             });
@@ -888,13 +904,13 @@ div.or
                     // Set a one second delay before getting updated list. Mostly to give user sense of progress/make it
                     // more obvious when the updated list loads
                     setTimeout(function(){
-                        tnthAjax.getConsent({{person.id}});
-                    },1000);
+                        tnthAjax.getConsent({{person.id}}, true);
+                    },1500);
 
             });
         };
         $(function () {
-            setTimeout("tnthAjax.getConsent({{person.id}}, false);", 500);
+            setTimeout("tnthAjax.getConsent({{person.id}});", 500);
         });
     </script>
     {% endif %}
@@ -1671,7 +1687,7 @@ div.or
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container">
-                    <h4 id="consentHistoryLoc" class="profile-item-title index-item">{{_("My Clinic Agreement")}}</h4>
+                    <h4 id="consentHistoryLoc" class="profile-item-title index-item">{{_("My Agreement")}}</h4>
                     {{profileConsent(person, current_user)}}
                 </div>
             </div>
@@ -1722,13 +1738,11 @@ div.or
             {{ profileCustomDetail(person) }}
         {%- endif -%}
     {%- endif -%}
-    {% if person and person.has_role(ROLE.PATIENT) -%}
-        <div class="row">
-            <div class="col-md-12 col-xs-12">
-                <h4 class="profile-item-title detail-title">{{_("Patient Details")}}</h4>
-            </div>
+    <div class="row">
+        <div class="col-md-12 col-xs-12">
+            <h4 class="profile-item-title detail-title">{{_("Patient Details")}}</h4>
         </div>
-    {%- endif %}
+    </div>
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="profile-item-container editable" data-sections="demo">
@@ -1782,7 +1796,7 @@ div.or
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
                     <div class="flex">
                         <div id="resetPasswordContainer" class="flex-item">
-                           <p class="text-muted communication-prompt">{{_("Send reset password email to patient")}}</p>
+                            <p class="text-muted communication-prompt">{{_("Send reset password email to patient")}}</p>
                             {{resetPassword(person)}}
                         </div>
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
@@ -1799,7 +1813,7 @@ div.or
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
                     <div class="flex">
                         <div id="resetPasswordContainer" class="flex-item">
-                            <p class="text-muted communication-prompt">{{_("Send reset password email to staff")}}</p>
+                            <p class="text-muted communication-prompt">{{_('Send reset password email to staff')}}</p>
                             {{resetPassword(person)}}
                         </div>
                         {%- if person and person.has_role(ROLE.WRITE_ONLY) -%}
