--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -2537,6 +2537,9 @@ input[type="checkbox"] {
     margin-top: 1px \9;
     line-height: normal;
 }
+#fillOrgs input[type="radio"] {
+    margin: 4px 2px 0 2px;
+}
 input[type="file"] {
     display: block;
 }
@@ -6999,7 +7002,7 @@ a.home--modal-link {
 }
 .noOrg-container label span {
      position: relative;
-     left: -5px;
+     left: 0.5em;
      top: 1px;
 }
 #fillOrgs legend {
@@ -7007,8 +7010,17 @@ a.home--modal-link {
     margin-bottom: 0.5em;
     opacity: 0.7;
 }
+#fillOrgs .indent {
+    margin-left: 1em;
+}
+#fillOrgs label {
+    font-weight: normal;
+}
+#fillOrgs .divider + .org-container {
+    margin-top: -1em;
+}
 #fillOrgs span {
-    margin-left: 0.2em;
+    margin-left: 0.4em;
 }
 #fillOrgs input[type='checkbox'] {
     position: relative;
