--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -262,6 +262,9 @@ input[type="radio"] {
     box-sizing: border-box;
     padding: 0;
 }
+#fillOrgs input[type="radio"] {
+    margin: 4px 2px 0 2px;
+}
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     height: auto;
@@ -7203,8 +7206,18 @@ a.home--modal-link {
     margin-bottom: 0.5em;
     opacity: 0.7;
 }
+#fillOrgs .indent {
+    margin-left: 1em;
+}
+#fillOrgs label {
+    font-weight: normal;
+}
+#fillOrgs .divider + .org-container {
+    margin-top: -1em;
+}
+
 #fillOrgs span {
-    margin-left: 0.2em;
+    margin-left: 0.4em;
 }
 #fillOrgs input[type='checkbox'] {
     position: relative;
